--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8000
-spring.datasource.url=jdbc:h2:~/data/makaogift
+spring.datasource.url=jdbc:h2:./data/makaogift
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
