--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ jwt.secret=SECRET
 #---
 spring.config.activate.on-profile=test
 spring.datasource.url=jdbc:h2:mem:test
+#---
+spring.config.activate.on-profile=production
+spring.datasource.url=jdbc:${DATABASE_URL}
